# jiff-humanize

./: .cliff.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  release.yml
examples/: humanize_systemtime.rs
src/: error.rs  humantime.rs  lib.rs
tests/: humanize.rs  precise.rs  present.rs  rough.rs
