[package]
name = "jiffy"
version = "0.1.0"
authors = ["Azzam S.A <noreply@azzamsa.com", "Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["date-and-time", "value-formatting"]
documentation = "https://docs.rs/jiffy"
edition = "2018"
homepage = "https://github.com/azzamsa/jiffy"
keywords = ["humanize", "jiff", "time", "date", "arrow"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/azzamsa/jiffy-rs"
description = "Human-friendly time expressions"

[badges]
github = { repository = "azzamsa/jiffy" }

[dependencies]
jiff = "0.1.4"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
